# OrnibiBot

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  launcher.py  package.xml  setup.py
gui/: gui.py  handler_gui.py  ornibibot_gui.py
include/: OrnibiBot.hpp  data.hpp
msg/: OrnibiBot.msg  OrnibiBotData.msg  joint_data.msg
ornibibot_acquisition/: CMakeLists.txt  package.xml
ornibibot_acquisition/include/: OrnibiBot.h  OrnibiBot.hpp  serial.h
ornibibot_acquisition/src/: OrnibiBot.cpp  acquisition.cpp
ornibibot_acquistion/: CMakeLists.txt  package.xml
ornibibot_acquistion/src/: acquisition.c
ornibibot_analyzer/: CMakeLists.txt  package.xml
ornibibot_analyzer/src/: converter.cpp
ornibibot_controller/: CMakeLists.txt  package.xml
ornibibot_controller/include/: OrnibiBot.hpp
ornibibot_controller/src/: OrnibiBot.cpp
ornibibot_gui/: CMakeLists.txt  package.xml  setup.cfg  setup.py
ornibibot_gui/include/: ornibibot_gui.hpp
ornibibot_gui/ornibibot_gui/: Converter.py  gui_handler.py
ornibibot_gui/src/: ornibibot_gui.cpp
ornibibot_msgs/: CMakeLists.txt  package.xml
ornibibot_msgs/msg/: JointData.msg  OrnibiBotData.msg  OrnibiBotGUI.msg
rosbag2_2023_12_15-04_35_33/: metadata.yaml  rosbag2_2023_12_15-04_35_33_0.db3
rosbag2_2023_12_17-17_33_02/: metadata.yaml  rosbag2_2023_12_17-17_33_02_0.db3
scripts/: main.py  ornibibot_core.py  plot_data.py  stream_data.py
serial/: CMakeLists.txt
serial-handler/: CMakeLists.txt
serial-handler/include/: Communication.hpp  comm.hpp
serial-handler/src/: Communication.cpp  comm.cpp  test.cpp
serial/include/: comm.hpp  serial.h
serial/src/: main.c  serial.c  test.c
shared-memory/: CMakeLists.txt
shared-memory/include/: data.hpp  shared_memory.h
shared-memory/src/: receiver.c  receiver.cpp  sender.c  sender.cpp  shared_memory.c
src/: OrnibiBot.cpp  main.cpp  main.py  receiver.cpp
visualization/: CMakeLists.txt
visualization/include/: Visualization.hpp
visualization/src/: Visualization.cpp  test.cpp
